Update back: entities and apis

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -98,10 +98,16 @@
                             <a href={{ path('app_terms_index') }} class="text-reset">Términos y Condiciones</a>
                         </li>
                         <li class="list-group-item py-1">
-                            <a href={{ path('app_privacy_index') }} class="text-reset">Políticas de Privacidad</a>
+                            <a href={{ path('app_privacy_index') }} class="text-reset">Política de Privacidad</a>
                         </li>
+                        {# <li class="list-group-item py-1">
+                            <a href={{ path('app_cookies_index') }} class="text-reset">Política de Cookies</a>
+                        </li> #}
                         <li class="list-group-item py-1">
                             <a href={{ path('app_faqs_index') }} class="text-reset">Preguntas Frecuentes</a>
+                        </li>
+                        <li class="list-group-item py-1">
+                            <a href={{ path('app_contact_index') }} class="text-reset">Mensajes Recibidos</a>
                         </li>
                         <li class="list-group-item py-1">
                             <a href={{ path('app_store_index') }} class="text-reset">Info de Contacto</a>
