--- a/templates/clients/_delete_form.html.twig
+++ b/templates/clients/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_clients_delete', {'id': client.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_clients_delete', {'id': client.id}) }}" onsubmit="return confirm('Estás segur@ que quieres eliminar este cliente?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ client.id) }}">
     <button class="btn btn-danger"><i class="fa-solid fa-trash me-2"></i>Eliminar</button>
 </form>
