--- a/templates/store/edit.html.twig
+++ b/templates/store/edit.html.twig
@@ -7,7 +7,7 @@
         <div class="actionsForm backBtn">
             <a href="{{ path('app_store_index') }}" class="btn btn-add"><i class="fa-solid fa-arrow-left me-2"></i> Volver</a>
         </div>
-        <h1 class="titleSection"><i class="fa-regular fa-pen-to-square me-2"></i>Editar Información de contcato</h1>
+        <h1 class="titleSection"><i class="fa-regular fa-pen-to-square me-2"></i>Editar Información de contacto</h1>
         {{ include('store/_form.html.twig', {'button_label': 'Guardar'}) }}
         <div class="actionsForm">
             {{ include('store/_delete_form.html.twig') }}
