--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,6 +5,6 @@
 {% block body %}
     <div class="contentHome">
         <img src={{ asset('assets/images/logo.png') }} alt="SmartFood" class="logoHome">
-        <p class="titleHome">Donde encontrarás la frescura de la huerta a solo unos pasos de tu hogar, porque cuidar de tu salud es nuestra prioridad.</p>
+        <p class="titleHome">Donde encontrarás la frescura de la huerta a solo unos pasos de tu hogar.</p>
     </div>    
 {% endblock %}
