--- a/templates/clients/index.html.twig
+++ b/templates/clients/index.html.twig
@@ -32,9 +32,11 @@
                         <a href="{{ path('app_clients_show', {'id': client.id}) }}" class="btn btn-show">
                             <i class="fa-regular fa-eye"></i>
                         </a>
-                        <a href="{{ path('app_clients_edit', {'id': client.id}) }}" class="btn btn-edit">
-                            <i class="fa-regular fa-pen-to-square"></i>
-                        </a>
+                        {% if is_granted('ROLE_ADMIN') %}
+                            <a href="{{ path('app_clients_edit', {'id': client.id}) }}" class="btn btn-edit">
+                                <i class="fa-regular fa-pen-to-square"></i>
+                            </a>
+                        {% endif %}                        
                     </td>
                 </tr>
             {% else %}
@@ -44,7 +46,8 @@
             {% endfor %}
             </tbody>
         </table>
-
-        <a href="{{ path('app_clients_new') }}" class="btn btn-add"><i class="fa-regular fa-square-plus me-2"></i> Agregar</a>
+        {% if is_granted('ROLE_ADMIN') %}
+            <a href="{{ path('app_clients_new') }}" class="btn btn-add"><i class="fa-regular fa-square-plus me-2"></i> Agregar</a>
+        {% endif %}
     </div>
 {% endblock %}
