--- a/templates/clients/show.html.twig
+++ b/templates/clients/show.html.twig
@@ -38,10 +38,12 @@
                         </tr>
                     </tbody>
                 </table>
-                <div class="actionsForm">
-                    <a href={{ path('app_clients_edit', {'id': client.id}) }} class="btn btn-edit"><i class="fa-regular fa-pen-to-square me-2"></i> Editar</a>
-                    {{ include('clients/_delete_form.html.twig') }}
-                </div>
+                {% if is_granted('ROLE_ADMIN') %}
+                    <div class="actionsForm">
+                        <a href={{ path('app_clients_edit', {'id': client.id}) }} class="btn btn-edit"><i class="fa-regular fa-pen-to-square me-2"></i> Editar</a>
+                        {{ include('clients/_delete_form.html.twig') }}
+                    </div>
+                {% endif %}
             </div>
         </div>
         <hr>
