--- a/templates/products/edit.html.twig
+++ b/templates/products/edit.html.twig
@@ -9,8 +9,10 @@
         </div>
         <h1 class="titleSection"><i class="fa-regular fa-pen-to-square me-2"></i>Editar Producto</h1>
         {{ include('products/_form.html.twig', {'button_label': 'Guardar'}) }}
+        {% if is_granted('ROLE_ADMIN') %}
         <div class="actionsForm">
             {{ include('products/_delete_form.html.twig') }}
         </div>
+        {% endif %}
     </div>    
 {% endblock %}
