--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -6,7 +6,7 @@
     
     <div class="content">
         <h1 class="titleSection"><i class="fa-solid fa-basket-shopping me-3"></i> Productos</h1>
-
+        <a href="{{ path('app_products_new') }}" class="btn btn-add"><i class="fa-regular fa-square-plus me-2"></i> Agregar</a>
         <table class="table table-striped table-products">
             <thead>
                 <tr>
