--- a/templates/products/show.html.twig
+++ b/templates/products/show.html.twig
@@ -57,10 +57,12 @@
                         </tr>
                     </tbody>
                 </table>
+                {% if is_granted('ROLE_ADMIN') %}
                 <div class="actionsForm">
                     <a href="{{ path('app_products_edit', {'id': product.id}) }}" class="btn btn-edit"><i class="fa-regular fa-pen-to-square me-2"></i> Editar</a>
                     {{ include('products/_delete_form.html.twig') }}
                 </div>
+                {% endif %}
             </div>
         </div>        
     </div>
